cif/org.eclipse.escet.cif.tests/tests/checks/EdgeOnlySimpleAssignmentsCheck.cif.check.err
ERROR: CIF checks tester failed due to unsatisfied preconditions:

  ----------------------------------
  (1/3) Edge has a multi-assignment.
  ----------------------------------
   * In location "a.l3":
     - edge e do (va, vb) := (1, 2) goto l4;
                          ^
   * In automaton "all":
     - edge e do (va, vb) := (1, 2);
                          ^
     - edge e do (vb, va) := (3, 4);
                          ^
   * In location "g.A.l3":
     - edge e do (va, vb) := (1, 2) goto l4;
                          ^
   * In automaton "multi_asgn":
     - edge e do (va, vb) := (1, 2);
                          ^

  ---------------------------------------------
  (2/3) Edge has a partial variable assignment.
  ---------------------------------------------
   * In location "a.l4":
     - edge e do li[0] := 1 goto l5;
                       ^
   * In automaton "all":
     - edge e do li[0] := 1;
                       ^
     - edge e do li[1] := 2;
                       ^
   * In location "g.A.l4":
     - edge e do li[0] := 1 goto l5;
                       ^
   * In automaton "partial_asgn":
     - edge e do li[0] := 1;
                       ^

  ------------------------------
  (3/3) Edge has an 'if' update.
  ------------------------------
   * In location "a.l5":
     - edge e do if true: va := 1 end goto l1;
                 ^
   * In automaton "all":
     - edge e do if true: va := 1 end;
                 ^
     - edge e do if true: va := 1 end;
                 ^
   * In location "g.A.l5":
     - edge e do if true: va := 1 end goto l1;
                 ^
   * In automaton "if_upd":
     - edge e do if true: v := 1 end;
                 ^
